--- a/lesson_12/public/index.html
+++ b/lesson_12/public/index.html
@@ -16,11 +16,11 @@
             <div id = "counter-block">
                 <div><p id = "counter">0</p></div>
             </div>
-            <button id = "plus"><div id = "plus-img"></div></button>
-            <button id = "minus"><div id = "minus-img"></div></button>
-            <button id = "reset"><div id = "reset-img"></div></button>
-            <button id = "download"></button>
-            <button id = "upload"></button>
+            <div id = "plus"><div id = "plus-img"></div></div>
+            <div id = "minus"><div id = "minus-img"></div></div>
+            <div id = "reset"><div id = "reset-img"></div></div>
+            <div id = "download"></div>
+            <div id = "upload"></div>
         </div>
     </div>
 </body>
